<resources>
    <string name="app_name">天气岛</string>
    <string name="celsius">℃</string>
    <string name="weather_view_sunny">sunny</string>
    <string name="weather_view_cloudy">cloudy</string>
    <string name="weather_view_rainy">rainy</string>
    <string name="weather_view_snowy">snowy</string>
    <string name="weather_view_foggy">foggy</string>
    <string name="weather_view_sand">sandy</string>
    <string name="weather_view_hazy">hazy</string>
    <string name="default_test_city_name">成都</string>
    <string name="default_test_date">星期一</string>
    <string name="default_test_index_title">运动指数</string>
    <string name="default_test_index_sub">较适宜</string>
    <string name="default_test_index_msg">天气较好，无雨水困扰，较适宜进行各种运动，但因气温较低，在户外运动请注意增减衣物。</string>
    <string name="default_test_warn_title">高温预警</string>
    <string name="default_test_time">12:00</string>
    <string name="default_test_weather">多云</string>
    <string name="default_aqi_quality_level">空气质量一级</string>
    <string name="default_aqi_primary_pollute">首要污染物:PM10</string>
    <string name="default_aqi_affect">空气质量可接受，但某些污染物可能对极少数异常敏感人群健康有较弱影响</string>
    <string name="menu_tips">提示</string>
    <string name="menu_popup_delete">删除</string>
    <string name="menu_city_management">城市选择</string>
    <string name="menu_warning">预警</string>
    <string name="menu_settings">设置</string>
    <string name="act_text_blur">高斯模糊</string>
    <string name="act_text_set_blur_raids">设置模糊半径:</string>
    <string name="act_text_set_blur_image">设置背景图片:</string>
    <string name="act_btn_select_image">选择图像</string>
    <string name="act_text_city_list">城市列表</string>
    <string name="act_text_settings">设置</string>
    <string name="act_text_import_city_data">正在导入城市数据...</string>
    <string name="act_text_weather_warn">气象预警</string>
    <string name="pop_tips">数据来源于极速数据</string>
    <string name="text_location">位置</string>
    <string name="dialog_text_title">提示</string>
    <string name="dialog_text_msg">内容</string>
    <string name="text_data_source">数据来源于中国气象局</string>
    <string name="page_text_day">白天</string>
    <string name="page_text_night">夜间</string>
    <string name="page_text_prediction">未来7天天气预报</string>
    <string name="page_text_prediction_day">未来24小时天气预报</string>
    <string name="city_search_hint">搜索关键字</string>
    <string name="settings_item_title">标题</string>
    <string name="settings_item_msg">内容</string>
    <string name="widget_weather_contaminated">轻度\n污染</string>
    <string name="widget_weather_wind">轻度\n污染</string>
    <string name="widget_weather_prediction">轻度\n污染</string>
    <string name="no_city_code">该城市/省份没有天气代码，不能添加</string>
    <string name="add_success">添加成功</string>
    <string name="city_already_exist">该城市已经存在</string>
    <string name="city_del">已删除</string>
    <string name="btn_ok">确定</string>
    <string name="not_opened_location">检测到你未打开定位功能,请打开后重试</string>
    <string name="refresh_success">刷新成功!</string>
    <string name="refresh_failed">刷新失败!</string>
    <string name="load_last_time_msg">已为你加载上一次天气信息</string>
    <string name="btn_exit">退出</string>
    <string name="no_network_connection">你似乎没有连接到网络，请连接网络后重试</string>
    <string name="import_success">导入成功</string>
    <string name="import_failed">导入失败!请稍后重试</string>
    <string name="permission_explain_title">权限说明</string>
    <string name="permission_explain_msg">定位权限用于获取所在地点的城市信息，存储权限用于高德定位写入离线定位数据。</string>
    <string name="unknown_error">发生未知错误</string>
    <string name="must_allow_permission">必须同意所有权限才能使用本应用程序！</string>
    <string name="cannot_del_default_city">默认城市不能删除</string>
    <string name="contributor_1"><u>@零下一度</u></string>
    <string name="contributor_2"><u>https://github.com/Mixiaoxiao/Weather</u></string>
    <string name="contributor_3"><u>https://github.com/YugengWang/Windmill</u></string>
    <string name="title_donate">捐赠</string>
    <string name="text_donate">你好，欢迎使用天气岛，我还是一个在校生，没有什么收入，而天气岛使用的付费的API，需要一些费用。
        \n如果你觉得这个程序有用，可以打赏作者，费用都将用于APP的维护，谢谢你的支持。\n\n当然你也可以自己申请API，这是开放功能。\n有任何问题、建议，请在酷安上联系我。</string>
    <string name="title_alipay">支付宝</string>
    <string name="title_wechat">微信</string>
    <string name="text_qr_code_saved">二维码已保存</string>
    <string name="text_save_qr_code">保存二维码</string>

</resources>
